fix(html): test pages had wrong relative URL paths

--- a/html/dexter.html
+++ b/html/dexter.html
@@ -42,7 +42,7 @@
                                                         "style": "call\u002Dto\u002Daction"
                                                     },
                                                     "resultsPerPage":"30",
-                                                    "endpoint": "../../CaaS-UI/mock-json/smoke.json",
+                                                    "endpoint": "../../caas/mock-json/smoke.json",
                                                     "fallbackEndpoint": "",
                                                     "totalCardsToShow": "1000",
                                                     "cardStyle": "1:2",
