--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     }
                 },
                 resultsPerPage: '5',
-                endpoint: "./mock-json/all-art-board-15-cards-show.json",
+                endpoint: "../../caas/mock-json/all-art-board-15-cards-show.json",
                 totalCardsToShow: '55',
                 cardStyle: "1:2", // available options: "1:2", "3:4", "full-card", "half-height", "custom-card", "product", "double-wide";
                 showTotalResults: 'true',
