--- a/html/milo.html
+++ b/html/milo.html
@@ -46,7 +46,7 @@
                     }
                 },
                 resultsPerPage: '5',
-                endpoint: "../../CaaS-UI/mock-json/smoke.json",
+                endpoint: "../../caas/mock-json/smoke.json",
                 totalCardsToShow: '55',
                 cardStyle: "1:2", // available options: "1:2", "3:4", "full-card", "half-height", "custom-card", "product", "double-wide";
                 showTotalResults: 'true',
